# rust-workspaces

./: cdk.json
lambda_workspaces/: Cargo.toml
lambda_workspaces/common_libs/: Cargo.toml
lambda_workspaces/common_libs/src/: models.rs
lambda_workspaces/my_lambda1/: Cargo.toml
lambda_workspaces/my_lambda1/src/: main.rs
lambda_workspaces/my_lambda2/: Cargo.toml
lambda_workspaces/my_lambda2/src/: main.rs  models.rs
lib/: rust-lambda-template-stack.ts
test/: rust-workspaces.test.ts
