[package]
name = "my_lambda2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_libs = { path = "../common_libs" }
tokio = { version="1.17.0", features = ["full"] }
serde = "^1"
serde_json = "^1"
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4.1"
anyhow = "1.0.53"
